update IdCloud demo URL

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
     </div>
   </div>
-  <form action="https://w.dev.local:8083/3ds" method="post" style="display:block;">
+  <form action="" method="post" style="display:block;">
     <input id="form-transaction" name="transaction">
     <input type="submit" id="form-submit">
   </form>
