--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class='credit-info-content hidden' id="step-success">
           <img src='completed.png' height='80' class='credit-card-image'></img>
-          <h2>You payment have been successfully completed.</h2>
+          <h2>You payment has been successfully completed.</h2>
           <h2>Thanks for your purchase.</h2>
         </div>
 
