on result, scroll to bottom for mobile

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
     </div>
   </div>
-  <form action="https://idcfido.demo.gemalto.com/3ds" method="post" style="display:block;">
+  <form action="https://idcfido.demo.gemalto.com/3ds" method="post" style="display:none;">
     <input id="form-transaction" name="transaction">
     <input type="submit" id="form-submit">
   </form>
