add link to idcfido demo + option to store card

--- a/index.html
+++ b/index.html
@@ -123,10 +123,14 @@
               </td>
             </tr>
           </table>
+          <div><label><input type="checkbox" id="card-remember">Remember my card</label></div>
           <button class='pay-btn' id="pay">Confirm & Pay</button>
         </div>
       </div>
     </div>
+  </div>
+  <div id="idcf-demo-link">
+    <a href="https://idcfido.demo.gemalto.com/"></a>
   </div>
   <form action="https://idcfido.demo.gemalto.com/3ds" method="post" style="display:none;">
     <input id="form-transaction" name="transaction">
