experimental SPC option

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <input type="submit" id="form-submit">
   </form>
   <script src="https://cdn.jsdelivr.net/npm/cash-dom/dist/cash.min.js"></script>
+  <script src="https://opotonniee.github.io/webauthn-playground/js/idcloud.js"></script>
   <script src="script.js"></script>
 </body>
 
