--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
       </div>
       <div class='credit-info'>
 
+        <div class='credit-info-content hidden' id="step-iframe">
+          <iframe id="3ds_iframe" allow="publickey-credentials-get" src=""></iframe>
+        </div>
+
         <div class='credit-info-content hidden' id="step-success">
           <img src='completed.png' height='80' class='credit-card-image'></img>
           <h2>You payment has been successfully completed.</h2>
