--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
       <div class='credit-info'>
 
         <div class='credit-info-content hidden' id="step-iframe">
-          <iframe id="3ds_iframe" allow="publickey-credentials-get" src=""></iframe>
+          <iframe name="3ds-iframe" allow="publickey-credentials-get"
+            sandbox="allow-top-navigation allow-scripts allow-same-origin" src=""></iframe>
         </div>
 
         <div class='credit-info-content hidden' id="step-success">
