--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class='credit-info'>
 
         <div class='credit-info-content hidden' id="step-iframe">
-          <iframe name="3ds-iframe" allow="publickey-credentials-get"
+          <iframe name="3ds-iframe" allow="publickey-credentials-get *"
             sandbox="allow-top-navigation allow-scripts allow-same-origin" src=""></iframe>
         </div>
 
