add option to show 3DS authorization in an Iframe (#1)

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
       </div>
       <div class='credit-info'>
 
+        <div class='credit-info-content hidden' id="step-iframe">
+          <iframe name="3ds-iframe" allow="publickey-credentials-get *"
+            sandbox="allow-top-navigation allow-scripts allow-same-origin" src=""></iframe>
+        </div>
+
         <div class='credit-info-content hidden' id="step-success">
           <img src='completed.png' height='80' class='credit-card-image'></img>
           <h2>You payment has been successfully completed.</h2>
