--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <img src='completed.png' height='80' class='credit-card-image'></img>
           <h2>You payment has been successfully completed.</h2>
           <h2>Thanks for your purchase.</h2>
+          <a href=".">&lt; Restart</a>
         </div>
 
 
@@ -143,7 +144,8 @@
   </form>
   <script src="https://cdn.jsdelivr.net/npm/cash-dom/dist/cash.min.js"></script>
   <script src="https://idcfido.demo.gemalto.com/idcloud.js"></script>
-  <script src="https://opotonniee.github.io/js-config/dist/js-config.js"></script>
+  <!--script src="https://opotonniee.github.io/js-config/dist/js-config.js"></script-->
+  <script src="https://w.dev.local:8843/js-config/dist/js-config.js"></script>
   <script src="script.js"></script>
 </body>
 
