--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
   </form>
   <script src="https://cdn.jsdelivr.net/npm/cash-dom/dist/cash.min.js"></script>
   <script src="https://idcfido.demo.gemalto.com/idcloud.js"></script>
-  <!--script src="https://opotonniee.github.io/js-config/dist/js-config.js"></script-->
-  <script src="https://w.dev.local:8843/js-config/dist/js-config.js"></script>
+  <script src="https://opotonniee.github.io/js-config/dist/js-config.js"></script>
   <script src="script.js"></script>
 </body>
 
